<resources>
    <string name="app_name">ePro TOEIC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_toeic_test">ToeicTestActivity</string>
    <string name="toeic_activity_actionbar_review">Review</string>
    <string name="toeic_title_section1">Listening Part 1</string>
    <string name="toeic_title_section2">Listening Part 2</string>
    <string name="toeic_title_section3">Listening Part 3</string>
    <string name="toeic_title_section4">Listening Part 4</string>
    <string name="toeic_title_section5">Reading Part 5</string>
    <string name="toeic_title_section6">Reading Part 6</string>
    <string name="toeic_title_section7">Reading Part 7</string>
    <string name="drawer_open">Home</string>
    <string name="drawer_close">Menu</string>
    <string name="image_view_content_description">content description</string>
    <string name="time_utils_date_time_minutes_ago_format">%1$d minutes ago.</string>
    <string name="time_utils_date_time_yesterday_format">%1$s Yesterday.</string>
    <string name="launch_menu_action_search">Search book</string>
    <string name="launch_menu_action_refresh">Refresh</string>
    <string name="launch_menu_action_home">Home</string>
    <string name="launch_menu_action_store">Store</string>
    <string name="launch_menu_action_setting_dictionary">Dictionary Setting</string>
    <string name="toeic_test_menu_action_finish_test">Finish</string>
    <string name="toeic_test_menu_action_review_score">Score</string>
    <string name="toeic_test_menu_action_undo">Highlight Undo</string>
    <string name="toeic_test_menu_action_dictsearch">Dictionary</string>
    <string name="network_error_dialog_tittle">Alert</string>
    <string name="network_error_dialog_message">You are not connecting to the Internet!</string>
    <string name="network_error_dialog_position_btn">Setting</string>
    <string name="network_error_dialog_negative_btn">Cancel</string>
    <string name="sidemenu_title_home">HOME</string>
    <string name="sidemenu_title_store">STORE</string>
    <string name="sidemenu_title_history">History</string>
    <string name="sidemenu_title_dictionary">Dictionary</string>
    <string name="sidemenu_title_setting">About</string>
    <string name="sidemenu_no_account">Setting Account</string>
    <string name="launch_activity_backpress_exit">Click BACK again to exit!</string>
    <string name="test_open_dialog_tittle">Choosing mode</string>
    <string-array name="test_open_dialog_items">
        <item>Real Test</item>
        <item>Practice Test (Hold any words for dictionary search)</item>
    </string-array>
    <string name="launch_home_fragment_delete_dialog_message">Are you sure to delete this book?</string>
    <string name="launch_home_fragment_delete_dialog_cancel_btn">NO</string>
    <string name="launch_home_fragment_delete_dialog_confirm_btn">DELETE</string>
    <string name="launch_home_fragment_bottom_status_loading">Loading more books &#8230;</string>
    <string name="launch_home_fragment_network_error">Network Error!</string>
    <string name="launch_home_fragment_server_maintenance">Server Maintenance! </string>
    <string name="launch_store_fragment_free_book">Free</string>
    <string name="launch_store_fragment_open">Open</string>
    <string name="launch_store_fragment_backup_book">Backup</string>
    <string name="loading_account_info_dialog_message">Loading account information &#8230;</string>
    <string name="download_dialog_message">Do you want to buy this book?</string>
    <string name="download_dialog_backup_message">Do you want to backup this book on this device?</string>
    <string name="download_dialog_confirm_btn">Confirm</string>
    <string name="download_dialog_not_enough_credit_message">You have not enough credit to buy this book!</string>
    <string name="download_dialog_not_enough_credit_btn">Get more credit</string>
    <string name="no_account_dialog_tittle">Alert!</string>
    <string name="no_account_dialog_message">Please setup account to buy books.\nYour new account will receive 80 credits for free!</string>
    <string name="no_account_dialog_cancel_btn">Cancel</string>
    <string name="no_account_dialog_setup_btn">Setup Account</string>
    <string name="launch_dictionary_favorite_button_text">Favorite</string>
    <string name="launch_about_app_help_tittle">ePro Help</string>
    <string name="launch_about_app_help_book_download_tittle">Download new Test</string>
    <string name="launch_about_app_about_tittle">About</string>
    <string name="launch_about_app_about_opensource_tittle">Open Source License</string>
    <string name="launch_about_app_about_label_version">Version</string>
    <string name="launch_about_app_about_version">1.0.2</string>
    <string name="launch_about_app_about_rating_us_title">Rating us 5 stars</string>
    <string name="launch_about_app_about_user_manual_title">User Guide (Youtube video)</string>
    <string name="launch_about_app_about_developer_homepage_title">Developer Homepage</string>
    <string name="open_source_license_dialog_fragment_title">Software License</string>
    <string name="open_source_license_dialog_fragment_positive_button">Close</string>
    <string name="dict_show_word_dialog_close_btn">OK</string>
    <string name="launch_history_string_mode_practice">Mode: Practice Test</string>
    <string name="launch_history_string_mode_test">Mode: Real Test</string>
    <string name="launch_history_string_status_doing">Status: Doing</string>
    <string name="launch_history_string_status_finish">Status: Finished</string>
    <string name="launch_history_string_actionbtn_status_finish">Review</string>
    <string name="launch_history_string_actionbtn_status_doing">Continue</string>
    <string name="launch_history_string_score">Score </string>
    <string name="launch_history_string_score_mark">points</string>
    <string name="launch_history_empty_history_text">You have no history!</string>
    <string name="quit_test_dialog_title">Alert</string>
    <string name="quit_test_dialog_message">Are you sure to quit current test?</string>
    <string name="quit_test_dialog_cancel_btn">NO</string>
    <string name="quit_test_dialog_quit_not_save_btn">Quit without Save</string>
    <string name="quit_test_dialog_quit_and_save_btn">Quit and Save</string>
    <string name="quit_test_review_dialog_title">Alert</string>
    <string name="quit_test_review_dialog_message">Are you sure to quit review mode?</string>
    <string name="quit_test_review_dialog_cancel_btn">NO</string>
    <string name="quit_test_review_dialog_quit_btn">Quit</string>
    <string name="quit_test_finish_dialog_title">Alert</string>
    <string name="quit_test_finish_dialog_message">Have you finished this test?</string>
    <string name="quit_test_finish_dialog_cancel_btn">NO</string>
    <string name="quit_test_finish_dialog_quit_btn">YES</string>
    <string name="quit_test_auto_finish_toast_message">You have 5 minutes before the test is finished!</string>
    <string name="quit_test_auto_finish_dialog_tittle">Alert!</string>
    <string name="quit_test_auto_finish_dialog_message">It is time to finish test. Press OK button to review your result!</string>
    <string name="quit_test_auto_finish_dialog_confirm_btn">OK</string>
    <string name="finish_test_result_dialog_tittle">Final Score</string>
    <string name="finish_test_result_dialog_quit_btn">Quit Test</string>
    <string name="finish_test_result_dialog_review_btn">Review</string>
    <string name="title_activity_account">Account Setting</string>
    <string name="choose_account_dialog_tittle">Choose your account</string>
    <string name="account_activity_no_account">Setup account</string>
    <string name="account_activity_login">LOGIN</string>
    <string name="account_activity_logout">LOG OUT</string>
   	<string name="account_activity_logout_alert_tittle">Alert</string>
    <string name="account_activity_logout_alert_message">Do you want to logout this account?\nYou cannot buy book or backup data without account!</string>
    <string name="account_activity_logout_alert_cancel">NO</string>
    <string name="account_activity_logout_alert_confirm">LOG OUT</string>
    <string name="account_activity_share">Share us and earn 5 credits everyday!</string>
    <string name="account_activity_buy_credit">BUY NOW</string>
    <string name="account_activity_credit">credits</string>
    <string name="account_activity_no_credit">80 credits for new account!</string>
    <string name="account_activity_credit_price_1">0.99$</string>
    <string name="account_activity_credit_price_2">1.99$</string>
    <string name="account_activity_credit_price_3">4.99$</string>
    <string name="account_activity_credit_price_1_credit">99\ncredits</string>
    <string name="account_activity_credit_price_2_credit">199\ncredits</string>
    <string name="account_activity_credit_price_3_credit">499\ncredits</string>
    <string name="account_activity_free_credit">Clicking below ad for 1 free credit!</string>
    <string name="account_activity_no_account_dialog_tittle">Alert</string>
    <string name="account_activity_no_account_dialog_message">Please login before buying credits!</string>
    <string name="account_activity_no_account_dialog_message_earn_free_credit">Please login to earn free credits!</string>
    <string name="account_activity_no_account_dialog_cancel">Cancel</string>
    <string name="account_activity_no_account_dialog_login">Login</string>
    <string name="account_activity_ad_over_click_tittle">Over Click Alert</string>
    <string name="account_activity_ad_over_click_message">You cannot click over 5 times each hour. Please back later!</string>
    <string name="account_activity_facebook_content_description">Share on facebook</string>
    <string name="account_activity_check_twitter_oauth_dialog_title">Alert</string>
    <string name="account_activity_check_twitter_oauth_dialog_message">Login Twitter account to share!</string>
    <string name="account_activity_check_twitter_oauth_dialog_positive_button">Login</string>
    <string name="account_activity_check_twitter_oauth_dialog_negative_button">Cancel</string>
    <string name="account_activity_twitter_follow_success_message">Follow successful</string>
    <string name="account_activity_twitter_post_message_success_message">Message was sent!</string>
    <string name="account_activity_twitter_post_message_dialog_tittle">Share on Twitter</string>
    <string name="account_activity_twitter_post_message_dialog_cancel">Cancel</string>
    <string name="account_activity_twitter_post_message_dialog_confirm">Post</string>
    <string name="account_activity_twitter_post_message_dialog_logout_twitter">Logout Twitter</string>
    <string name="account_activity_twitter_post_over_click_tittle">Alert</string>
    <string name="account_activity_twitter_post_over_click_message">You already shared this app today. Please share it again tomorrow!</string>
    <string name="account_activity_facebook_post_over_click_tittle">Alert</string>
    <string name="account_activity_facebook_post_over_click_message">You already shared this app today. Please share it again tomorrow!</string>
    <string name="account_activity_tv_phonecard_buy">Phonecard payment (Vietnamese only)</string>
    <string name="account_activity_btn_phonecard_buy">Phonecard Pay</string>
    <string name="account_activity_phonecard_dialog_tittle">Phonecard payment (Vietnamese only)</string>
    <string name="account_activity_phonecard_dialog_cancel">Cancel</string>
    <string name="account_activity_phonecard_dialog_lbl_cardtype">Card type</string>
    <string name="account_activity_phonecard_dialog_lbl_serial">Serial</string>
	<string name="account_activity_phonecard_dialog_edit_serial_hint">serial number</string>
    <string name="account_activity_phonecard_dialog_lbl_pin">Pin Number</string>
    <string name="account_activity_phonecard_dialog_edit_pin_hint">pin number</string>
</resources>